--- a/plugins/_jquery/lang/system/fields.en_US.lang.ini
+++ b/plugins/_jquery/lang/system/fields.en_US.lang.ini
@@ -1,4 +1,3 @@
-[photo]
 [photos]
 system_field_picture_too_high = The picture is too high. It must be at most %1 pixels.
 system_field_picture_too_wide = The picture is too wide. It must be at most %1 pixels.
@@ -6,3 +5,7 @@ system_field_picture_too_small = The picture is too small. It must be at least %
 
 system_field_file_too_big = Error on upload. Try to select a smaller file (max. %1, jpg/png/gif)!
 system_field_file_upload_error = The selected file isn't fit for requirements! (Max. %1, jpg/png/gif)!
+
+[relationships]
+system_field_relationships_search = Type to search...
+system_field_relationships_search_no_results = No results found.
