Fix photos and file configurations. Needs more testing on Mootools-enabled repos.

--- a/plugins/_jquery/lang/system/fields.hu_HU.lang.ini
+++ b/plugins/_jquery/lang/system/fields.hu_HU.lang.ini
@@ -4,5 +4,5 @@ system_field_picture_too_high = A kép mérete túl magas. Legyen max %1 pixeles
 system_field_picture_too_wide = A kép mérete túl széles. Legyen max %1 pixeles.
 system_field_picture_too_small = A kép mérete túl kicsi. Legyen legalább %1 x %2 pixeles.
 
-system_field_file_too_big = A fájl feltöltése nem sikerült. Próbálj kissebb méretű fájlt választani (maximum %1, jpg/png/gif)!
-system_field_file_upload_error = A kiválasztott fájl nem felel meg a követelményeknek! (Maximum %1, jpg/png/gif)!
+system_field_file_too_big = A fájl feltöltése nem sikerült. Próbálj kissebb méretű fájlt választani (maximum %1, jpg/png/gif)! A most feltöltött fájl mérete %2.
+system_field_file_upload_error = Ismeretlen hiba, valószínűleg a kiválasztott fájl nem felel meg a követelményeknek! (Maximum %1, jpg/png/gif)!
