Italian error messages added.

--- a/plugins/_jquery/lang/system/fields.it_IT.lang.ini
+++ b/plugins/_jquery/lang/system/fields.it_IT.lang.ini
@@ -1,11 +1,11 @@
 [photos]
-system_field_picture_too_high = The picture is too high. It must be at most %1 pixels.
-system_field_picture_too_wide = The picture is too wide. It must be at most %1 pixels.
-system_field_picture_too_small = The picture is too small. It must be at least %1 x %2 pixels.
+system_field_picture_too_high = La foto è troppo alta. Deve essere alta al massimo %1 pixels.
+system_field_picture_too_wide = La foto è troppo larga. Deve essere larga al massimo %1 pixels.
+system_field_picture_too_small = La foto è troppo piccola. Deve essere larga almeno %1 x %2 pixels.
 
-system_field_file_too_big = We were unable to upload the file. Choose a smaller file (maximum %1, instead of the current %2)!
-system_field_file_upload_error = Unknown error during upload. The selected file probably does not fit the requirements! (Max. %1)!
+system_field_file_too_big = Non è possibile caricare la foto. Scegli un file più piccolo (massimo %1 MB, invece degli attuali %2 MB)!
+system_field_file_upload_error = Si è verificato un errore durante l'upload. Probabilmente il file non risponde alle specifiche richieste! (Massimo %1 MB)
 
 [relationships]
-system_field_relationships_search = Type to search...
-system_field_relationships_search_no_results = No results found.
+system_field_relationships_search = Tipo di ricerca...
+system_field_relationships_search_no_results = Nessun risultato trovato.
