--- a/plugins/_global/lang/ieupgrade.sk_SK.lang.ini
+++ b/plugins/_global/lang/ieupgrade.sk_SK.lang.ini
@@ -1,2 +1,2 @@
-message = You are using an outdated browser. Please upgrade to get the full experience.
-button = Upgrade
+message = Používate zastaralý prehliadač, stiahnite si nový.
+button = Aktualizovať
