--- a/plugins/_global/lang/ieupgrade.cs_CZ.lang.ini
+++ b/plugins/_global/lang/ieupgrade.cs_CZ.lang.ini
@@ -1,2 +1,2 @@
-message = You are using an outdated browser. Please upgrade to get the full experience.
-button = Upgrade
+message = Jsou známy bezpečnostní rizika a možná nedokáže zobrazit všechny prvky této a dalších webových stránek.
+button = Aktualizovat
