--- a/plugins/_jquery/lang/system/fields.de_DE.lang.ini
+++ b/plugins/_jquery/lang/system/fields.de_DE.lang.ini
@@ -9,3 +9,7 @@ system_field_file_upload_error = Unknown error during upload. The selected file 
 [relationships]
 system_field_relationships_search = Type to search...
 system_field_relationships_search_no_results = No results found.
+
+[custom]
+system_field_custom_new = Add a new custom value
+system_field_custom_value_placeholder = Value
