--- a/plugins/_jquery/lang/system/fields.hu_HU.lang.ini
+++ b/plugins/_jquery/lang/system/fields.hu_HU.lang.ini
@@ -19,3 +19,7 @@ system_field_file_upload_error = Ismeretlen hiba, valószínűleg a kiválasztot
 [relationships]
 system_field_relationships_search = A kereséshez írj...
 system_field_relationships_search_no_results = Nincs találat.
+
+[custom]
+system_field_custom_new = Új egyedi mező hozzáadása
+system_field_custom_value_placeholder = Érték megadása
