--- a/plugins/_jquery/lang/system/fields.it_IT.lang.ini
+++ b/plugins/_jquery/lang/system/fields.it_IT.lang.ini
@@ -9,3 +9,7 @@ system_field_file_upload_error = Si è verificato un errore durante l'upload. Pr
 [relationships]
 system_field_relationships_search = Tipo di ricerca...
 system_field_relationships_search_no_results = Nessun risultato trovato.
+
+[custom]
+system_field_custom_new = Add a new custom value
+system_field_custom_value_placeholder = Value
