Photo upload button is now localized.

--- a/plugins/_jquery/lang/system/fields.hu_HU.lang.ini
+++ b/plugins/_jquery/lang/system/fields.hu_HU.lang.ini
@@ -1,4 +1,6 @@
 [photos]
+system_field_picture_upload = Kép kiválasztása
+
 system_field_picture_too_high = A kép mérete túl magas. Legyen max %1 pixeles.
 system_field_picture_too_wide = A kép mérete túl széles. Legyen max %1 pixeles.
 system_field_picture_too_small = A kép mérete túl kicsi. Legyen legalább %1 x %2 pixeles.
