--- a/plugins/_jquery/lang/system/fields.it_IT.lang.ini
+++ b/plugins/_jquery/lang/system/fields.it_IT.lang.ini
@@ -1,4 +1,6 @@
 [photos]
+system_field_picture_upload = Choose photo
+
 system_field_picture_too_high = La foto è troppo alta. Deve essere alta al massimo %1 pixels.
 system_field_picture_too_wide = La foto è troppo larga. Deve essere larga al massimo %1 pixels.
 system_field_picture_too_small = La foto è troppo piccola. Deve essere larga almeno %1 x %2 pixels.
