--- a/plugins/_jquery/lang/system/fields.sk_SK.lang.ini
+++ b/plugins/_jquery/lang/system/fields.sk_SK.lang.ini
@@ -1,4 +1,6 @@
 [photos]
+system_field_picture_upload = Choose photo
+
 system_field_picture_too_high = The picture is too high. It must be at most %1 pixels.
 system_field_picture_too_wide = The picture is too wide. It must be at most %1 pixels.
 system_field_picture_too_small = The picture is too small. It must be at least %1 x %2 pixels.
