--- a/plugins/_jquery/lang/system/fields.hu_HU.lang.ini
+++ b/plugins/_jquery/lang/system/fields.hu_HU.lang.ini
@@ -22,6 +22,9 @@ system_field_file_upload_error = Ismeretlen hiba, valószínűleg a kiválasztot
 system_field_relationships_search = A kereséshez írj...
 system_field_relationships_search_no_results = Nincs találat.
 
+[richtext]
+system_field_richtext_placeholder = Írd ide a szöveget és jelölj ki a formázáshoz...
+
 [custom]
 system_field_custom_new = Új egyedi mező hozzáadása
 system_field_custom_value_placeholder = Érték megadása
