--- a/plugins/_jquery/lang/system/fields.sk_SK.lang.ini
+++ b/plugins/_jquery/lang/system/fields.sk_SK.lang.ini
@@ -22,6 +22,9 @@ system_field_file_upload_error = Unknown error during upload. The selected file 
 system_field_relationships_search = Type to search...
 system_field_relationships_search_no_results = No results found.
 
+[richtext]
+system_field_richtext_placeholder = Type your text and select any text to format it...
+
 [custom]
 system_field_custom_new = Add a new custom value
 system_field_custom_value_placeholder = Value
