--- a/plugins/_jquery/lang/system/fields.en_US.lang.ini
+++ b/plugins/_jquery/lang/system/fields.en_US.lang.ini
@@ -11,7 +11,8 @@ system_field_file_partial = A file was only partially uploaded.
 system_field_file_upload_error = Unknown error during upload. The selected file probably does not fit the requirements! (Max. %1, jpg/png/gif)!
 
 [files]
-system_field_files_upload = Upload file
+system_field_file_upload = Upload file
+system_field_files_upload = Upload files
 
 system_field_file_too_big = We were unable to upload the file. Choose a smaller file (maximum %1, instead of the current %2)!
 system_field_file_none = No file was uploaded.
