--- a/plugins/_jquery/lang/system/fields.hu_HU.lang.ini
+++ b/plugins/_jquery/lang/system/fields.hu_HU.lang.ini
@@ -11,7 +11,8 @@ system_field_file_partial = Csak részlegesen lett feltöltve a fájl.
 system_field_file_upload_error = Ismeretlen hiba, valószínűleg a kiválasztott fájl nem felel meg a követelményeknek! (Maximum %1, jpg/png/gif)!
 
 [files]
-system_field_files_upload = Fájl feltöltése
+system_field_file_upload = Fájl feltöltése
+system_field_files_upload = Fájlok feltöltése
 
 system_field_file_too_big = A fájl feltöltése nem sikerült. Próbálj kissebb méretű fájlt választani (maximum %1)! A most feltöltött fájl mérete %2.
 system_field_file_none = Nem lett feltöltve fájl.
