--- a/plugins/_jquery/lang/system/fields.it_IT.lang.ini
+++ b/plugins/_jquery/lang/system/fields.it_IT.lang.ini
@@ -11,7 +11,8 @@ system_field_file_partial = A file was only partially uploaded.
 system_field_file_upload_error = Si è verificato un errore durante l'upload. Probabilmente il file non risponde alle specifiche richieste! (Massimo %1 MB)
 
 [files]
-system_field_files_upload = Upload file
+system_field_file_upload = Upload file
+system_field_files_upload = Upload files
 
 system_field_file_too_big = We were unable to upload the file. Choose a smaller file (maximum %1, instead of the current %2)!
 system_field_file_none = No file was uploaded.
