localizing keyvalue field

--- a/plugins/_jquery/lang/system/fields.en_US.lang.ini
+++ b/plugins/_jquery/lang/system/fields.en_US.lang.ini
@@ -28,3 +28,7 @@ system_field_richtext_placeholder = Type your text and select any text to format
 [custom]
 system_field_custom_new = Add a new custom value
 system_field_custom_value_placeholder = Value
+
+[keyvalue]
+system_field_keyvalue_key = Key
+system_field_keyvalue_value = Value
