--- a/plugins/_jquery/lang/system/fields.hu_HU.lang.ini
+++ b/plugins/_jquery/lang/system/fields.hu_HU.lang.ini
@@ -28,3 +28,7 @@ system_field_richtext_placeholder = Írd ide a szöveget és jelölj ki a formá
 [custom]
 system_field_custom_new = Új egyedi mező hozzáadása
 system_field_custom_value_placeholder = Érték megadása
+
+[keyvalue]
+system_field_keyvalue_key = Kulcs
+system_field_keyvalue_value = Érték
