new button localized

--- a/plugins/_jquery/lang/system/fields.hu_HU.lang.ini
+++ b/plugins/_jquery/lang/system/fields.hu_HU.lang.ini
@@ -32,3 +32,4 @@ system_field_custom_value_placeholder = Érték megadása
 [keyvalue]
 system_field_keyvalue_key = Kulcs
 system_field_keyvalue_value = Érték
+system_field_keyvalue_new = Új
