--- a/plugins/_jquery/lang/system/fields.en_US.lang.ini
+++ b/plugins/_jquery/lang/system/fields.en_US.lang.ini
@@ -32,3 +32,4 @@ system_field_custom_value_placeholder = Value
 [keyvalue]
 system_field_keyvalue_key = Key
 system_field_keyvalue_value = Value
+system_field_keyvalue_new = New
