Fix search when empty query. Fix search and pagination in category.

--- a/plugins/_global/lang/category.en_US.lang.ini
+++ b/plugins/_global/lang/category.en_US.lang.ini
@@ -6,6 +6,7 @@ menu_category = Categories
 
 [admin]
 admin_list = Categories
+admin_list_url = category/
 admin_list_desc = Grouping hierachically
 admin_new = New category
 admin_edit = Edit
