--- a/plugins/_global/lang/category.hu_HU.lang.ini
+++ b/plugins/_global/lang/category.hu_HU.lang.ini
@@ -7,7 +7,7 @@ menu_category = Kategóriák
 [admin]
 admin_list = Kategóriák
 admin_list_url = category/
-
+admin_list_desc = Csoportosítás hierachica szerint
 admin_new = Új kategória
 admin_edit = Szerkesztés
 admin_edit_subcategories = Alkategóriák (%1)
