--- a/plugins/_jquery/lang/system/fields.en_US.lang.ini
+++ b/plugins/_jquery/lang/system/fields.en_US.lang.ini
@@ -1,5 +1,6 @@
 [photos]
 system_field_picture_upload = Choose photo
+system_field_pictures_upload = Choose photos
 
 system_field_picture_too_high = The picture is too high. It must be at most %1 pixels.
 system_field_picture_too_wide = The picture is too wide. It must be at most %1 pixels.
